eks/deployment.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: rockcom
#  labels:
#    app: rockcom-backend
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: rockcom-backend
#  template:
#    metadata:
#      labels:
#        app: rockcom-backend
#    spec:
#      containers:
#        - name: rockcom-backend
#          image: 329976954374.dkr.ecr.eu-central-1.amazonaws.com/rockcom/backend:0d54fb8452cff289218d96ceb5b8131b575f8fd0
#          ports:
#            - containerPort: 8080

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rockcom
  labels:
    app: rockcom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rockcom
  template:
    metadata:
      labels:
        app: rockcom
    spec:
      containers:
        - name: rockcom-backend
          image: 329976954374.dkr.ecr.eu-central-1.amazonaws.com/rockcom/backend:0d54fb8452cff289218d96ceb5b8131b575f8fd0
          ports:
            - containerPort: 8080
        - name: rockcom-frontend
          image: 329976954374.dkr.ecr.eu-central-1.amazonaws.com/rockcom/frontend:1a0820742cc2533e2c97c3f9095dd06ecf87c1b4
          ports:
            - containerPort: 3000
