eks/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rockcom-frontend
  labels:
    app: rockcom-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rockcom-frontend
  template:
    metadata:
      labels:
        app: rockcom-frontend
    spec:
      containers:
        - name: rockcom-frontend
          image: 329976954374.dkr.ecr.eu-central-1.amazonaws.com/rockcom/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      imagePullSecrets:
        - name: aws-ecr-secret
