eks/nginx-deployment.yaml
# nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config

# kubectl apply -f nginx-deployment.yaml

# aws ecr get-login-password --region eu-central-1 | kubectl create secret docker-registry aws-ecr-secret \
#  --docker-server=329976954374.dkr.ecr.eu-central-1.amazonaws.com \
#  --docker-username=AWS \
#  --docker-password-stdin
