eks/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rockcom-backend-service
spec:
  selector:
    app: rockcom-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
