eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rockcom-ingress
spec:
  rules:
    - host: ""
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rockcom-frontend-service
                port:
                  number: 80
